cluster/apps/matrix/whatsapp-bridge/peer-auth.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: allow-permissive-discord-bridge-access
spec:
  mtls:
    mode: PERMISSIVE
