cluster/apps/matrix/whatsapp-bridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: whatsapp-bridge
    app.kubernetes.io/version: v25.12
  name: whatsapp-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whatsapp-bridge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whatsapp-bridge
        app.kubernetes.io/version: v25.12
    spec:
      automountServiceAccountToken: false
      containers:
      - image: dock.mau.dev/mautrix/whatsapp:v25.12
        name: whatsapp-bridge
        ports:
        - containerPort: 29318
          name: whatsapp-bridge
        volumeMounts:
        - mountPath: /data
          name: data-volume
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: config-volume
        configMap:
          name: whatsapp-bridge-configmap
      - name: data-volume
        persistentVolumeClaim:
          claimName: whatsapp-bridge-data-pvc
