cluster/apps/matrix/whatsapp-bridge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: whatsapp-bridge
    app.kubernetes.io/version: v0.7.5
  name: whatsapp-bridge
spec:
  selector:
    app.kubernetes.io/name: whatsapp-bridge
  ports:
  - name: http-whatsapp-bridge
    port: 29318
    targetPort: 29318
