cluster/apps/matrix/whatsapp-bridge/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whatsapp-bridge-networkpolicy
spec:
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: synapse
      podSelector:
        matchLabels:
          app.kubernetes.io/name: synapse
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: synapse
      podSelector:
        matchLabels:
          app.kubernetes.io/name: synapse
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix-pg-cluster
      podSelector:
        matchLabels:
          cnpg.io/cluster: matrix-pg
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
